Refactor API client setup and improve provisioning services (#13)
* Refactor component provisioner to introduce facades for API logic handling.

* Refactor provisioning services to use idToken for improved API client handling.

* [hidden-parameters-validation] - Add RestTemplateLoggingInterceptor.

* Refactor `ApiClientsBuilder` and `RestConfiguration` to streamline `RestTemplate` usage and remove redundant configurations.

* Refactor `RestConfiguration` to replace Apache HttpClient with JDK HttpClient and remove unused dependency.

* Refactor `AuthenticationProvider` to move it from controllers to services package for better domain separation.

* Refactor tests to use `URI` for URL creation and add new test cases for `AuthenticationProvider` and component state validation.

* Add unit tests for interceptors, controllers, and facades to improve coverage and validate idToken handling.

* Refactor `RestTemplateLoggingInterceptor` for improved null-safety and streamline authentication handling in `ApiClientsBuilder`.

* Refactor variable naming in `ProvisionResultsApiFacade` to improve clarity and update access token validation messages; make `bearerToken` static in `ApiClientsBuilder`.

* Refactor `ApiClientsBuilder` to rename `bearerToken` to `BEARER_TOKEN` for consistency with naming conventions.

* Update validation message in `ProvisionResultsApiFacadeTest` to remove `id_token` requirement.

* Refactor tests to add BDD-style structure (given-when-then) and adjust logging levels for debugging; rename variables for consistency.

* Refactor `ProvisionResultsApiFacade` and related components to streamline provisioning process and centralize `idToken` handling.

* Commit to force latest build.

* Commit to update latest

---------

Co-authored-by: soriaoli <sergio.soria_olivares.ext@boehringer-ingelheim.com>